fixed a bug (default nav display prop to none to make sure it is only visible when the hamburger is clicked

--- a/Main/src/index.css
+++ b/Main/src/index.css
@@ -466,9 +466,6 @@ nav ul {
 input[type="checkbox"] {
   display: none;
 }
-.bar {
-  display: none;
-}
 
 .hamburger {
   position: relative;
@@ -476,64 +473,11 @@ input[type="checkbox"] {
   display: flex;
   justify-content: end;
 }
-/* hamburger menu */
-  input[type="checkbox"] {
-    -webkit-appearance: none;
+@media only screen and (min-width: 1024px) {
+  ul {
     display: block;
-    visibility: hidden;
   }
-
-  .bar {
-    display: block;
-    position: relative;
-    cursor: pointer;
-    width: 50px;
-    height: 40px;
-  }
-
-  .bar span {
-    position: absolute;
-    width: 45px;
-    height: 7px;
-    background: #f1faee;
-    border-radius: 100px;
-    display: inline-block;
-    transition: 0.3s ease;
-  }
-
-  .bar span.top {
-    top: 0;
-  }
-
-  .bar span.middle {
-    top: 17px;
-  }
-
-  .bar span.bottom {
-    bottom: 0;
-  }
-
-  /* when the user check the hamburger menu */
-  input[type="checkbox"]:checked + .bar .top {
-    transform: rotate(45deg);
-    transform-origin: top left;
-    width: 48px;
-    left: 5px;
-  }
-  
-  input[type="checkbox"]:checked + .bar .bottom {
-    transform: rotate(-45deg);
-    transform-origin: top left;
-    width: 48px;
-    bottom: -1px;
-    box-shadow: 0 0 10px #495057;
-  }
-  
-  input[type="checkbox"]:checked + .bar .middle {
-    transform: translateX(-20px);
-    opacity: 0;
-  }
-
+}
 
 /* change the css rules for any screen size <= 1164px */
 @media only screen and (max-width: 1164px)  {
@@ -626,7 +570,8 @@ input[type="checkbox"] {
     align-items: end;
   }
   nav ul {
-    display: none;  
+    display: none;
+    flex-direction: column;
     width: 50%;
     margin: 1.5rem;
     background: linear-gradient(
